--- a/Site/views/remove.ejs
+++ b/Site/views/remove.ejs
@@ -11,29 +11,7 @@
 <body class="recibir">
  <header class="recibir">
 
-    <div class="container">
-        <div class="row">
-
-
-            <nav class="logo-home">
-                <a class="logo-link" href="#">
-                    <img src="/images/Logo_.png" alt="logo">
-                </a>
-            </nav>
-
-            <div class="btn-group">
-                <a href="./recibir.html" class="btn btn-primary" aria-current="page">Recibir</a>
-                <a href="./retirar.html" class="btn btn-primary active">Retirar</a>
-              </div>
-
-            <div class="toggle-nav">
-				<a href="#">
-					<span class="fas fa-bars"></span>
-				</a>
-			</div>
-        </div>
-    </div>
-    
+  <%- include('partials/header')%>   
   </header>
 
   <section class="recibir">
@@ -56,8 +34,11 @@
 
 
 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
+    <%- include('partials/footer')%>   
   </body>
   </html>
