--- a/Site/views/shipping.ejs
+++ b/Site/views/shipping.ejs
@@ -1,51 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <%- include('partials/head')%>   
     <title>Recibir</title>
 </head>
 <body class="recibir">
  <header class="recibir">
 
-    <div class="container">
-        <div class="row">
-
-
-            <nav class="logo-home">
-                <a class="logo-link" href="#">
-                    <img src="/images/Logo_.png" alt="logo">
-                </a>
-            </nav>
-
-            <div class="btn-group">
-                <a href="shipping.ejs" class="btn btn-primary active" aria-current="page">Recibir</a>
-                <a href="remove.ejs" class="btn btn-primary">Retirar</a>
-              </div>
-
-            <div class="toggle-nav">
-				<a href="#">
-					<span class="fas fa-bars"></span>
-				</a>
-			</div>
-        </div>
-    </div>
+    <%- include('partials/header')%>   
     
   </header>
 
-  <section class="recibir">
-      <h2>¿Preferis recibir o retirar tu producto?</h2>
-      <br><br><br>
-      <h3>Recibir</h3>
-      <form action="submit">
-          <label for="calle">Direccion de la calle</label><br>
-          <input type="text" id="calle" name="direc" placeholder="Nombre de la calle y numero de la casa">
-          <input type="text" id="calle2" name="det-direc" placeholder="Apartamento,habitacion,etc.(opcional)">
-          <br><br>
-          <p class="bold">País de nacimiento</p>
+  <section>
+    <div class="container shipping">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="envio-container">
+            <div class="envio">
+              <h2 class="text1">Para continuar complete con la informacion para el envio</h2>
+              <form action="">
+                <input type="text" placeholder="Nombre de calle" class="calle">
+                <input type="text" placeholder="Depto/piso" class="calle2">
+                <input type="text" placeholder="Numeración" class="numero">
+                <p class="bold">País de nacimiento</p>
             <select name="pais" id="pais">
                 <option value="arg">Argentina</option>
                 <option value="chi">Chile</option>
@@ -89,18 +66,30 @@
                 <option value="tig">Tigre</option>
                 <option value="azu">Azul</option>
             </select>  
-            <br><br>
-            <label for="notas">Notas del pedido</label><br>
-            <input type="text" id="notas" name="notas" placeholder="Notas sobre el pedido,por ejemplo, notas especiales para la entrega o descripcion de la fachada">
-
-      </form>
-      <br>
-      <div class="d-grid gap-2">
-        <button class="btn btn-primary" type="button">Aceptar</button>
-        <button class="btn btn-primary" type="button">Cancelar</button>
+                <input type="text" placeholder="Caracteristica de la fachada (opcional)" class="nota">
+                <input type="submit" class="submit" value="Continuar" a href="/payForm">
+              </form>
+            </div>
+            <div class="retiro">
+              <h2 class="retiro">Retirar producto</h2><a name="retirar"></a>
+              <div class="retiro-info">
+                <p>Te esperamos en nuestras sucursales!</p>
+                <p>De Lunes a Sabados de 07:30 hs a 19:30 hs</p>
+                <p>en Av.Belgrano 3916, C1210 AAU, Buenos Aires </p>
+                </div>
+                <div class="retiro-map">
+                <a class="btn btn-primary btn-lg" href="https://www.google.com.ar/maps/place/Tech+House+Argentina/@-34.6159323,-58.4240538,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcca596dc8d84d:0x4a6d4aa90ecb601a!8m2!3d-34.6159367!4d-58.4218651" role="button"><i class="fas fa-map-marked-alt"></i>Ver en maps</a>
+                <br><br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.5342670485225!2d-58.42405378477004!3d-34.61593668045616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca596dc8d84d%3A0x4a6d4aa90ecb601a!2sTech%20House%20Argentina!5e0!3m2!1ses!2sar!4v1612367313606!5m2!1ses!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+               
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+</section>
 
-  </section>
     
 
 
@@ -109,5 +98,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+<%- include('partials/footer')%>   
 </body>
 </html>
