arreglos en los botones

--- a/Site/views/cart.ejs
+++ b/Site/views/cart.ejs
@@ -72,18 +72,25 @@
 
 
     <div class="container-botones">
-
-        <div class="row col-12">
-            <div class="boton1">
-                <a href="#" class="btn btn-primary">Agregar a Guardados</a>
-            </div>
-            <div class="boton2">
-                <button href="/payform" class="btn btn-success btn-block" id="procesar-compra">COMPRAR
-                    AHORA</button>
+        <div class="row boton1">
+            <div class="col-12 col-md-6 col-lg-3">
+                <div>
+                    <a href="#" class="btn btn-primary">Agregar a Guardados</a>
+                </div>
             </div>
         </div>
-
+        
+        <div class="row boton2">
+            <div class="col-12 col-md-6 col-lg-3">
+                <div>
+                    <button href="/payform" class="btn btn-success btn-block" id="procesar-compra">COMPRAR
+                        AHORA</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+   
 
 
 
