--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -174,7 +174,8 @@
 		  </div>
 		  <div class="col-12 col-md-6 col-lg-3 caja1">
 			<div>
-				<a  href="#" target="_blank">  <img src="images/ARDUINO_01.jpg" alt=""></a>
+				
+				<a  href="#" target="_blank"><img src="images/ARDUINO_01.jpg" alt=""> <H3>ARDUINO</H3> </a>
 			</div>
 		  </div>
 
