--- a/Site/public/stylesheets/cart.css
+++ b/Site/public/stylesheets/cart.css
@@ -9,3 +9,15 @@
 .cards img{
     width: 80%;
 }
+
+.boton1{ 
+    display: flex;
+    justify-content: center;
+}
+
+.boton2 {
+    display: flex;
+    justify-content: center;
+    margin-right: 2px;
+    margin-top: 9px;
+}
