cambios en el logo

--- a/Site/views/formularioPago.ejs
+++ b/Site/views/formularioPago.ejs
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col-md-3"></div>
                     <a href="/" class="logoA">
-                        <img class="logo" src="images/Logo_.png" alt="">
+                        <img class="logo" src="images/logoTechnoHouse.png" alt="">
                       </a>
                 </div>
                     <div class="col-md-6">
