--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -8,7 +8,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="col-12 text-center">
                   <a href="/">
-                    <img class="logo" src="/images/Logo_.png" alt="">
+                    <img class="logo" src="/images/logoTechnoHouse.png" alt="">
                 </a>
                 </div>
                 
