--- a/Site/views/partials/header.ejs
+++ b/Site/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-3" id="logoA">
             <a href="/">
-                <img class="logo" src="/images/Logo_.png" alt="">
+                <img class="logo" src="/images/logoTechnoHouse.png" alt="">
               </a>
                 </div>
         
