--- a/Site/public/stylesheets/home.css
+++ b/Site/public/stylesheets/home.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,400&display=swap');
+.carrousel {
+  display: none;
+}
 .carrousel-item img{
     height: 200px;
 }
@@ -45,6 +48,11 @@ h5 {
     margin-bottom: 40px;
     text-align: center;
     transition: transform .5s ease, box-shadow .5s ease;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
   }
   .productos .contenido:hover {
     transform: scale(1.02);
@@ -75,13 +83,13 @@ h5 {
   }
   .productos .datos i {
     color: #30475e;
-    /*background-color: rgb(255, 155, 155);*/
-    border-color:  #30475e 1px solid ;
+    background-color: rgb(255, 255, 255);
+    border:  #30475e 1px solid ;
     border-radius: 50%;
     padding: 8px;
-    font-size: 1.3rem;
+    font-size: 2rem;
     position: absolute;
-    top: -20px;
+    top: -26px;
     right: 20px;
   }
 
