--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -66,7 +66,10 @@
 			  </div>
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" alt="">
+					<div>
+						<img src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" alt="">
+					</div>
+				 
 				  <div class="datos">
 					<h3>$500,97</h3>
 					<p>ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328</p>
