--- a/Site/views/partials/header.ejs
+++ b/Site/views/partials/header.ejs
@@ -1,27 +1,35 @@
-  <header>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3" id="logoA">
-            <a href="/">
-                <img class="logo" src="/images/logoTechnoHouse.png" alt="">
-              </a>
-                </div>
-        
-            <div class="col-md-6">
-                <form action="" id="form">
-                    <input type="text" placeholder="Buscar productos, marcas y más">
-                    <button type="submit">
-                      <i class="fas fa-search"></i>
-                    </button>
-                  </form>
-            </div>
+<header>
+  <div class="container-fluid">
+    <div class="row justify-content-end">
+      <div class="box-logo col-12 col-md-3 col-lg-3" id="logoA">
+        <a href="/">
+          <img class="logo" src="/images/logoTechnoHouse.png" alt="" />
+        </a>
+      </div>
 
-            <div class="col-md-3">
-                <ul class="botones-nav">
-                    <li><a class="btn btn-primary bot1 " href="/cart" role="button">Carrito <i class="fas fa-cart-plus "></i></a></li>
-                    <li><a class="btn btn-primary bot2"  href="/users/Iniciar" role="button">Ingresá <i class="far fa-address-card "></i></a></li>
-                    <li><a class="btn btn-primary bot3" href="#" role="button">Guardados <i class="far fa-heart "></i></a></li>
-                  </ul>
+      <div class=" form-nav col-12 col-md-8 col-lg-5">
+        <form action="" id="form">
+          <input type="text" placeholder="Buscar productos, marcas y más" />
+          <button type="submit">
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
+      </div>
+
+      <div class=" botones-nav col-12 col-md-8 col-lg-4">
+          <a href="/cart">
+            <button class="btn btn-outline-light">
+              Carrito <i class="fas fa-cart-plus"></i></button
+          ></a>
+          <a href="/users/iniciar">
+            <button class="btn btn-outline-light">
+              Ingresá <i class="fas fa-address-card"></i></button
+                      ></a>
+                      <a href="/">
+                        <button class="btn btn-outline-light">
+                          Guardado <i class="fas fa-heart"></i></button></a>
+
+
                 </div>
                 </div>
             </div>
