--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -54,12 +54,12 @@
         </div>
     </section>
 
-    <section class="detalle col-6"> 
+    <section class="detalle"> 
         <h3>Descripcion</h3>
         <p>El Arduino Nano es una pequeña y completa placa basada en el  ATmega328. Es muy compacto y puedes ser utilizado fácilmente en un  protoboard. Tiene más o menos la misma funcionalidad que el Arduino Uno, pero con una presentación diferente. La placa es compatible 100%. No posee conector para alimentación externa, y funciona con un cable USB Mini-B (incluido) en vez del cable estándar.</p>
         <h2>$320.00</h2>
     </section>
-        <div class="d-grid gap-2 col-6">
+        <div class="d-grid gap-2">
             <button class="btn btn-primary" type="button"><i class="fas fa-shopping-bag"></i>COMPRAR AHORA</button>
             <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i>AGREGAR AL
                 CARRITO</button>
