--- a/Site/views/shipping.ejs
+++ b/Site/views/shipping.ejs
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
     <%- include('partials/head')%>   
-    <title>Recibir</title>
+
 </head>
-<body class="recibir">
- <header class="recibir">
+
+<body>
 
     <%- include('partials/header')%>   
     
