--- a/Site/views/cart.ejs
+++ b/Site/views/cart.ejs
@@ -34,7 +34,7 @@
                         <th>Nombre</th>
                         <th>imagen</th>
                         <th>precio</th>
-                        <th>descripcion</th>
+                      <!--   <th class="desc">descripcion</th> -->
                         <th>Eliminar</th>
 
                     </tr>
@@ -44,7 +44,7 @@
                     <td> Display Led </td>
                     <td> <img src="https://www.cromptonlamps.com/imagecache/dd325c1c-f550-42ff-ae1a-a87a00ed8e8b/3415---LED-G9-25W-2700K_1000x1000.jpg" alt="Product Pic" height="40px" width="40px" /></td>
                     <td>$ 20.00</td>
-                    <td>display led de 2.5w</td>
+                  <!--   <td>display led de 2.5w</td> -->
 
                     <td><a class="btn btn-danger btn-xs" href="#"><i class="fas fa-trash-alt"></i><span
                                 class="glyphicon glyphicon-trash"></span></a></td>
@@ -55,7 +55,7 @@
                     <td> Led COB </td>
                     <td> <img src="https://http2.mlstatic.com/D_NQ_NP_713360-MLA31050388703_062019-O.webp" alt="Product Pic" height="40px" width="40px" /></td>
                     <td>$ 20.00</td>
-                    <td>led COB de 50w</td>
+                  <!--   <td>led COB de 50w</td> -->
 
                     <td><a class="btn btn-danger btn-xs" href="#"><i class="fas fa-trash-alt"></i><span
                                 class="glyphicon glyphicon-trash"></span></a></td>
@@ -71,95 +71,96 @@
 
 
 
-    <div class="container-botones">
-        <div class="row boton1">
-            <div class="col-12 col-md-6 col-lg-3">
-                <div>
-                    <a href="#" class="btn btn-primary">Agregar a Guardados</a>
+    
+            <div class="botones-nav col-12">
+                    <a href="#">
+                      <button class="btn btn-primary">Agregar a Guardados</button></a> 
+                     <a href="/payform">
+                      <button class="btn btn-success btn-block" id="procesar-compra">COMPRAR
+                        AHORA</button></a> 
                 </div>
             </div>
         </div>
         
-        <div class="row boton2">
+      <!--   <div class="row boton2">
             <div class="col-12 col-md-6 col-lg-3">
-                <div>
-                    <button href="/payform" class="btn btn-success btn-block" id="procesar-compra">COMPRAR
-                        AHORA</button>
-                </div>
+                
             </div>
-        </div>
+        </div> -->
     </div>
 
    
 
 
 
-    <section class="container">
-        <div class="row cards">
-          
-            <div class="col-12"> 
-        <h2>PENSADO PARA VOS</h2>
-            </div>
 
-
-                         <div class="col-12 col-md-6 col-lg-3">
-                            
-                                <div class="card" style="width: 18rem;">
-                                    <img src="https://ventaderepuestos.es/21325-thickbox_default/modulo-electronico-00646759.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                    <h5 class="card-title">MÓDULO ELECTRÓNICO 00646759</h5>
-                                    <h4 class="card-price">$150.00</h4>
-                                    <p class="card-text">Some quick example text to build on the card title and make </p>
-                                    <a href="#" class="btn btn-primary">Agregar y comprar ahora</a>
-                                    </div>
-                              </div>
-                            
+            <section class="container">
+                <div class="row productos">
+                  <div class="col-12">
+                    <h2>PENSADO PARA VOS</h2>
+                  </div>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="contenido">
+                        <div>
+                            <img src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" alt="">
                         </div>
-
-                        <div class="col-12 col-md-6 col-lg-3">
-                            
-                                <div class="card" style="width: 18rem;">
-                                    <img src="https://http2.mlstatic.com/D_NQ_NP_676893-MLA31023657616_062019-O.webp" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                    <h5 class="card-title">TecnoliveUSA Led 10mm Alta Luminosidad</h5>
-                                    <h4 class="card-price">$15.00</h4>
-                                    <p class="card-text">- Voltaje: 3 - 3,2 V - Amperaje: 20 Ma</p>
-                                    <a href="#" class="btn btn-primary">Agregar y comprar ahora</a>
-                                    </div>
-                                </div>
-                                
+                     
+                      <div class="datos">
+                        <h3>$500,97</h3>
+                        <p>ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328</p>
+                        <i class="fas fa-truck"></i>
+                      </div>
+                    </div>
+                  </div>
+    
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="contenido">
+                        <div>
+                            <img src="/images/productos/ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340.jpg" alt="">
                         </div>
-
-                        <div class="col-12 col-md-6 col-lg-3">
-                            
-                                <div class="card" style="width: 18rem;">
-                                    <img src="https://http2.mlstatic.com/D_NQ_NP_639521-MLA42702964243_072020-O.webp" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                    <h5 class="card-title">Servo Mg995 TOWER PRO</h5>
-                                    <h4 class="card-price">$60.00</h4>
-                                    <p class="card-text">Servo Tower Pro de 360 grados</p>
-                                    <a href="#" class="btn btn-primary">Agregar y comprar ahora</a>
-                                    </div>
-                                </div>
-                           
+                     
+                      <div class="datos">
+                        <h3>$130,97</h3>
+                        <p>ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328</p>
+                        <i class="fas fa-truck"></i>
+                      </div>
+                    </div>
+                  </div>
+    
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="contenido">
+                        <div>
+                            <img src="/images/productos/FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO.jpg" alt="">
                         </div>
+                     
+                      <div class="datos">
+                        <h3>$210,40</h3>
+                        <span>30% OFF</span>
+                        <p>FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO</p>
+                        <i class="fas fa-truck"></i>
+                      </div>
+                    </div>
+                  </div>
 
-                        <div class="card1 col-12 col-md-6 col-lg-3">
-                            
-                                <div class="card" style="width: 18rem;">
-                                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_735921-MLA27478460893_062018-F.webp" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                    <h5 class="card-title">Arduino NANO</h5>
-                                    <h4 class="card-price">$320.00</h4>
-                                    <p class="card-text">Arduino tipo NANO modelo Atmega328 Basado En Ch340</p>
-                                    <a href="#" class="btn btn-primary">Agregar y comprar ahora</a>
-                                    </div>
-                                </div>
-                            
+
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="contenido">
+                        <div>
+                            <img src="/images/productos/SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA.jpg" alt="">
                         </div>
-                
-        </div>        
-    </section>
+                     
+                      <div class="datos">
+                        <h3>250,68</h3>
+                        <span>20% OFF</span>
+                        <p>SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA</p>
+                        <i class="fas fa-truck"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+                       
 
 
 
