--- a/Site/views/shipping.ejs
+++ b/Site/views/shipping.ejs
@@ -69,8 +69,11 @@
                 <input type="text" placeholder="Caracteristica de la fachada (opcional)" class="nota">
                 <input type="submit" class="submit" value="Continuar" a href="/payForm">
               </form>
+              <a href="#retiro" style="color: #30475e;">
+                <h1 class="lretiro">¿Preferis retirar el producto en nuestra sucursal?</h1>
+            </a>
             </div>
-            <div class="retiro">
+            <div id="retiro" class="retiro">
               <h2 class="retiro">Retirar producto</h2><a name="retirar"></a>
               <div class="retiro-info">
                 <p>Te esperamos en nuestras sucursales!</p>
