--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -55,9 +55,30 @@
     </section>
 
     <section class="detalle"> 
+        <div class="titulo col 12">
         <h3>Descripcion</h3>
+        </div>
+        <div class="informacion">
         <p>El Arduino Nano es una pequeña y completa placa basada en el  ATmega328. Es muy compacto y puedes ser utilizado fácilmente en un  protoboard. Tiene más o menos la misma funcionalidad que el Arduino Uno, pero con una presentación diferente. La placa es compatible 100%. No posee conector para alimentación externa, y funciona con un cable USB Mini-B (incluido) en vez del cable estándar.</p>
+        </div>
+       <div class="precios">
         <h2>$320.00</h2>
+        </div>
+        <div class="center">
+            <div class="stars">
+              <input type="radio" id="five" name="rate" value="5">
+              <label for="five"></label>
+              <input type="radio" id="four" name="rate" value="4">
+              <label for="four"></label>
+              <input type="radio" id="three" name="rate" value="3">
+              <label for="three"></label>
+              <input type="radio" id="two" name="rate" value="2">
+              <label for="two"></label>
+              <input type="radio" id="one" name="rate" value="1">
+              <label for="one"></label>
+              <span class="result"></span>
+            </div>
+        </div>     
     </section>
         <div class="d-grid gap-2">
             <button class="btn btn-primary" type="button"><i class="fas fa-shopping-bag"></i>COMPRAR AHORA</button>
