arreglo de products home

--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -124,7 +124,7 @@
 				<div class="contenido">
 				  <img src="/images/productos/MODULO SENSOR DE SONIDO MICROFONO REGULABLE ARDUINO.jpg" alt="">
 				  <div class="datos">
-					<h3>$651,33</h3>
+					<h3>$210,40</h3>
 					<span>40% OFF</span>
 					<p>MODULO SENSOR DE SONIDO MICROFONO REGULABLE ARDUINO</p>
 					<i class="fas fa-truck"></i>
@@ -144,22 +144,22 @@
 			  </div>
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="images/productos/MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO.jpg" alt="">
+				  <img src="images/productos/PACK 50 LEDS 3MM ROJOS AMARILLOS VERDES AZUL BLANCO.jpg" alt="">
 				  <div class="datos">
-					<h3>$604,35</h3>
+					<h3>$366,83</h3>
 					<span>30% OFF</span>
-					<p>MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO</p>
+					<p>PACK 50 LEDS 3MM ROJOS AMARILLOS VERDES AZUL BLANCO</p>
 					<i class="fas fa-truck "></i>
 				  </div>
 				</div>
 			  </div>
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="/images/productos/ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340.jpg" alt="">
+				  <img src="/images/productos/DISPLAY LCD 1602 HD44780 FONDO AZUL TEXTO BLANCO 16X2.jpg" alt="">
 				  <div class="datos">
-					<h3>$651,33</h3>
+					<h3>$454,13</h3>
 					<span>10% OFF</span>
-					<p>ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340</p>
+					<p>DISPLAY LCD 1602 HD44780 FONDO AZUL TEXTO BLANCO 16X2</p>
 					<i class="fas fa-truck "></i>
 				  </div>
 				</div>
