--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -64,12 +64,12 @@
 			  <div class="col-12">
 				<h2>Basadø en tu última visita</h2>
 			  </div>
+
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
 					<div>
-						<img src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" alt="">
+					<img src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" alt="">
 					</div>
-				 
 				  <div class="datos">
 					<h3>$500,97</h3>
 					<p>ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328</p>
@@ -80,7 +80,9 @@
 
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="/images/productos/ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340.jpg" alt="">
+					<div>
+						<img src="/images/productos/ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340.jpg" alt="">
+					</div>
 				  <div class="datos">
 					<h3>$651,33</h3>
 					<span>10% OFF</span>
@@ -92,7 +94,9 @@
 
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="/images/productos/FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO.jpg" alt="">
+					<div>
+						<img src="/images/productos/FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO.jpg" alt="">
+					</div>
 				  <div class="datos">
 					<h3>$210,40</h3>
 					<span>30% OFF</span>
@@ -101,9 +105,13 @@
 				  </div>
 				</div>
 			  </div>
+
+
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="/images/productos/SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA.jpg" alt="">
+				  <div>
+					<img src="/images/productos/SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA.jpg" alt="">
+				  </div>
 				  <div class="datos">
 					<h3>250,68</h3>
 					<span>20% OFF</span>
@@ -112,6 +120,8 @@
 				  </div>
 				</div>
 			  </div>
+
+
 			</div>
 		  </section>
 		  <!-- PRODUCTOS OFERTAS -->
@@ -122,7 +132,9 @@
 			  </div>
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="/images/productos/MODULO SENSOR DE SONIDO MICROFONO REGULABLE ARDUINO.jpg" alt="">
+					<div>
+						<img src="/images/productos/MODULO SENSOR DE SONIDO MICROFONO REGULABLE ARDUINO.jpg" alt="">
+					</div>
 				  <div class="datos">
 					<h3>$210,40</h3>
 					<span>40% OFF</span>
@@ -133,7 +145,9 @@
 			  </div>
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="images/productos/MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO.jpg" alt="">
+					<div>
+						<img src="images/productos/MINI SERVO TOWER PRO SG92 2.5KG TORQUE ARDUINO.jpg" alt="">
+					</div>
 				  <div class="datos">
 					<h3>$604,35</h3>
 					<span>10% OFF</span>
@@ -144,7 +158,9 @@
 			  </div>
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="images/productos/PACK 50 LEDS 3MM ROJOS AMARILLOS VERDES AZUL BLANCO.jpg" alt="">
+					<div>
+						<img src="images/productos/PACK 50 LEDS 3MM ROJOS AMARILLOS VERDES AZUL BLANCO.jpg" alt="">
+					</div>
 				  <div class="datos">
 					<h3>$366,83</h3>
 					<span>30% OFF</span>
@@ -155,7 +171,9 @@
 			  </div>
 			  <div class="col-12 col-md-6 col-lg-3">
 				<div class="contenido">
-				  <img src="/images/productos/DISPLAY LCD 1602 HD44780 FONDO AZUL TEXTO BLANCO 16X2.jpg" alt="">
+					<div>
+						<img src="/images/productos/DISPLAY LCD 1602 HD44780 FONDO AZUL TEXTO BLANCO 16X2.jpg" alt="">
+					</div>
 				  <div class="datos">
 					<h3>$454,13</h3>
 					<span>10% OFF</span>
@@ -170,7 +188,7 @@
 	<!-- CATEGORIAS -->
 
 
-	<section class="container">
+	<!-- <section class="container">
 		<div class="row productos">
 		  <div class="col-12">
 			<h2>Categorias</h2>
@@ -232,7 +250,7 @@
 			</div> 
 		  </div> 
 		</div>
-	  </section>
+	  </section> -->
 
 
 
