--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -28,9 +28,9 @@
                     <input type="password" placeholder="Contraseña" class="pass">
                     <input type="submit" class="submit" value="INICIAR">
                   </form>
-                  <a href="#" style="color: #30475e;">
+                  <!--<a href="#" style="color: #30475e;">
                       <h1 class="noLogin">¿Aún no estás registrado?</h1>
-                  </a>
+                  </a> --> 
                 </div>
                 <div class="login">
                   <h2 class="iniciar">Iniciar cuenta con</h2>
